Allowed for config-site files to specify CUDA_LIBS

--- a/config-site/bluewaters.conf
+++ b/config-site/bluewaters.conf
@@ -1,4 +1,5 @@
 CUDA=/opt/nvidia/cuda/4.0.17a
+CUDA_LIBS="-lcudart"
 MPI_CPPFLAGS="-I/opt/cray/udreg/2.3.1-1.0400.3911.5.13.gem/include -I/opt/cray/ugni/2.3-1.0400.4127.5.20.gem/include -I/opt/cray/dmapp/3.2.1-1.0400.3965.10.63.gem/include -I/opt/cray/gni-headers/2.1-1.0400.4156.6.1.gem/include -I/opt/cray/xpmem/0.1-2.0400.30792.5.6.gem/include -I/opt/cray/pmi/3.0.0-1.0000.8661.28.2807.gem/include -I/opt/cray/mpt/5.4.2/xt/gemini/mpich2-gnu/46/include -I/opt/xt-libsci/11.0.04/gnu/46/interlagos/include -I/usr/include/alps"
 MPI_LDFLAGS="-L/opt/cray/udreg/2.3.1-1.0400.3911.5.13.gem/lib64 -L/opt/cray/ugni/2.3-1.0400.4127.5.20.gem/lib64 -L/opt/cray/dmapp/3.2.1-1.0400.3965.10.63.gem/lib64 -L/opt/cray/xpmem/0.1-2.0400.30792.5.6.gem/lib64 -L/opt/cray/pmi/3.0.0-1.0000.8661.28.2807.gem/lib64 -L/opt/cray/mpt/5.4.2/xt/gemini/mpich2-gnu/46/lib -L/opt/xt-libsci/11.0.04/gnu/46/interlagos/lib -L/opt/fftw/default/interlagos/lib -L/usr/lib/alps -L/opt/gcc/4.6.2/snos/lib/gcc/x86_64-suse-linux/4.6.2 -L/opt/gcc/4.6.2/snos/lib/gcc/x86_64-suse-linux/4.6.2/../../../../lib64 -L/lib/../lib64 -L/usr/lib/../lib64 -L/opt/cray/atp/1.4.1/lib/"
 MPI_LIBS="-lmpichcxx_gnu -lmpich_gnu -lpmi -lalpslli -lalpsutil"
