fixing typo in make dependencies for zlib.

--- a/config/make-dependencies.in
+++ b/config/make-dependencies.in
@@ -38,7 +38,7 @@ VTK_CPPFLAGS=@VTK_CPPFLAGS@
 VTK_LDFLAGS=@VTK_LDFLAGS@
 VTK_LIBS=@VTK_LIBS@
 
-ZLIB=@VTK@
+ZLIB=@ZLIB@
 ZLIB_CPPFLAGS=@ZLIB_CPPFLAGS@
 ZLIB_LDFLAGS=@ZLIB_LDFLAGS@
 ZLIB_LIBS=@ZLIB_LIBS@
