adding 2d axis with tick marks and labels.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -24,6 +24,7 @@ OBJ=\
  common/eavlNewIsoTables.o \
  common/eavlOperation.o \
  common/eavlTimer.o \
+ common/eavlUtility.o \
  exporters/eavlVTKExporter.o \
  exporters/eavlPNMExporter.o \
  filters/eavl3X3AverageMutator.o \
