adding histogramming and bar-style renderer.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -33,6 +33,7 @@ OBJ=\
  filters/eavlElevateMutator.o \
  filters/eavlExternalFaceMutator.o \
  filters/eavlIsosurfaceFilter.o \
+ filters/eavlScalarBinFilter.o \
  filters/eavlSurfaceNormalMutator.o \
  filters/eavlTesselate2DFilter.o \
  filters/eavlThresholdMutator.o \
