--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,6 +45,7 @@ OBJ=\
  fonts/Liberation2Sans.o \
  fonts/Liberation2Serif.o \
  importers/eavlBOVImporter.o \
+ importers/eavlCurveImporter.o \
  importers/eavlImporterFactory.o \
  importers/eavlMADNESSImporter.o \
  importers/eavlPDBImporter.o \
