--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -5,3 +5,5 @@ SET(EAVL_RENDERING_SRCS
 add_library(eavl_rendering 
   ${EAVL_RENDERING_SRCS}
 )
+
+ADD_GLOBAL_LIST(EAVL_EXPORTED_LIBS eavl_rendering)
