--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -3,14 +3,18 @@ SET(EAVL_COMMON_SRCS
   eavlAtomicProperties.cpp
   eavlCellComponents.cpp
   eavlCellSetExplicit.cpp
+  eavlCompositor.cpp
   eavlCUDA.cpp
   eavlDataSet.cpp
   eavlExecutor.cpp
   eavlNewIsoTables.cpp
   eavlOperation.cpp
   eavlTimer.cpp
+  eavlUtility.cpp
 )
 
 add_library(eavl_common 
   ${EAVL_COMMON_SRCS}
 )
+
+ADD_GLOBAL_LIST(EAVL_EXPORTED_LIBS eavl_common)
