--- a/src/exporters/CMakeLists.txt
+++ b/src/exporters/CMakeLists.txt
@@ -6,3 +6,5 @@ SET(EAVL_EXPORTERS_SRCS
 add_library(eavl_exporters 
   ${EAVL_EXPORTERS_SRCS}
 )
+
+ADD_GLOBAL_LIST(EAVL_EXPORTED_LIBS eavl_exporters)
