--- a/src/filters/CMakeLists.txt
+++ b/src/filters/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET(EAVL_FILTERS_SRCS
+  eavl2DGraphLayoutForceMutator.cpp
   eavlElevateMutator.cpp
   eavlExternalFaceMutator.cpp
   eavlTesselate2DFilter.cpp
@@ -6,20 +7,32 @@ SET(EAVL_FILTERS_SRCS
 )
 
 IF (HAVE_CUDA) 
+  # set this, otherwise C_SOURCES is empty in Visual Studio  
+  set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE OFF) 
+
   SET(EAVL_FILTERS_CUDA_SRCS 
     eavl3X3AverageMutator.cu
     eavlIsosurfaceFilter.cu
     eavlSurfaceNormalMutator.cu
     eavlTransformMutator.cu
     eavlBinaryMathMutator.cu
+    eavlCellToNodeRecenterMutator.cu
+    eavlScalarBinFilter.cu
+#    eavlUnaryMathMutator.cu
   )
-  cuda_add_library(eavl_filters
-    ${EAVL_FILTERS_SRCS}
+  cuda_add_library(eavl_filters_cu
     ${EAVL_FILTERS_CUDA_SRCS}
   )
+  ADD_GLOBAL_LIST(EAVL_EXPORTED_LIBS eavl_filters_cu)
+
+  add_library(eavl_filters
+    ${EAVL_FILTERS_SRCS}
+  )
+  target_link_libraries(eavl_filters eavl_filters_cu)
+  ADD_GLOBAL_LIST(EAVL_EXPORTED_LIBS eavl_filters)
+
 ELSE (HAVE_CUDA)
   add_library(eavl_filters 
     ${EAVL_FILTERS_SRCS}
   )
 ENDIF (HAVE_CUDA) 
-
