--- a/config-site/ion.ornl.gov.conf
+++ b/config-site/ion.ornl.gov.conf
@@ -1,4 +1,4 @@
-BOOST=/apps/boost/1.49.0/linux-x86_64-gcc46
+#BOOST=/apps/boost/1.49.0/linux-x86_64-gcc46
 SZIP=/apps/visit/szip/2.1/linux-x86_64_gcc-4.6
 SILO=/apps/visit/silo/4.8/linux-x86_64_gcc-4.6
 HDF5=/apps/visit/hdf5/1.8.7/linux-x86_64_gcc-4.6
